flux/apps/homeassistant-proxy/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: homeassistant-proxy
  labels:
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: v1.30
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: v1.30
