flux/apps/homeassistant-proxy/endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: homeassistant

subsets:
  - addresses:
      - ip: 192.168.1.194
    ports:
      - port: 8123
        protocol: TCP
