flux/apps/homeassistant-proxy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homeassistant
spec:
  clusterIP: None
